objects/DeviceTypesPerBrand__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Device Types Per Brand</relationshipLabel>
        <relationshipName>Device_Types_Per_Brand</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Device Type</label>
        <referenceTo>DeviceType__c</referenceTo>
        <relationshipLabel>Device Types Per Brand</relationshipLabel>
        <relationshipName>Device_Types_Per_Brand</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_id__c</fullName>
        <externalId>true</externalId>
        <label>TECH_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Device Types Per Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brand__c</columns>
        <columns>DeviceType__c</columns>
        <columns>TECH_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DTPB-{0000}</displayFormat>
        <label>Device Types Per Brands Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Types Per Brand</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>